src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from Parser.y
-----------------------------------------------------------------------------


terminal bc is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Query                              (0)
	Query -> '(' Query ')'                             (1)
	Query -> select SType                              (2)
	Query -> select SType From                         (3)
	Query -> select distinct SType                     (4)
	Query -> select distinct SType From                (5)
	Query -> SubQuery Union SubQuery                   (6)
	Query -> SubQuery Intersect SubQuery               (7)
	SubQuery -> '(' Query ')'                          (8)
	Union -> union                                     (9)
	Union -> union all                                 (10)
	Union -> union distinct                            (11)
	Intersect -> intersect                             (12)
	Intersect -> intersect all                         (13)
	Intersect -> intersect distinct                    (14)
	Alias -> identifier                                (15)
	Alias -> as identifier                             (16)
	Null -> null                                       (17)
	True -> true                                       (18)
	False -> false                                     (19)
	String -> string                                   (20)
	Number -> integer                                  (21)
	Number -> float                                    (22)
	Primitive -> Null                                  (23)
	Primitive -> True                                  (24)
	Primitive -> False                                 (25)
	Primitive -> String                                (26)
	Primitive -> Number                                (27)
	Expr -> Primitive                                  (28)
	Expr -> identifier                                 (29)
	Expr -> dotwalk                                    (30)
	Expr -> identifier '(' Args ')'                    (31)
	Expr -> Operator                                   (32)
	Expr -> '(' Expr ')'                               (33)
	Args -> Arg                                        (34)
	Args -> Args ',' Arg                               (35)
	Arg -> Expr                                        (36)
	Operator -> Expr '+' Expr                          (37)
	Operator -> Expr '-' Expr                          (38)
	Operator -> Expr '*' Expr                          (39)
	Operator -> Expr '/' Expr                          (40)
	Operator -> Expr '%' Expr                          (41)
	Operator -> Expr '=' Expr                          (42)
	Operator -> Expr '!=' Expr                         (43)
	Operator -> Expr '<' Expr                          (44)
	Operator -> Expr '<=' Expr                         (45)
	Operator -> Expr '>' Expr                          (46)
	Operator -> Expr '>=' Expr                         (47)
	Operator -> Expr and Expr                          (48)
	Operator -> Expr or Expr                           (49)
	Operator -> not Expr                               (50)
	Operator -> '-' Expr                               (51)
	SType -> '*'                                       (52)
	SType -> Columns                                   (53)
	Columns -> Column                                  (54)
	Columns -> Columns ',' Column                      (55)
	Column -> Expr                                     (56)
	Column -> Expr Alias                               (57)
	From -> from Tables Where GroupBy OrderBy Limit    (58)
	Tables -> Table                                    (59)
	Tables -> Tables ',' Table                         (60)
	Table -> identifier                                (61)
	Table -> identifier Alias                          (62)
	Table -> Table natural join Table                  (63)
	Table -> Table Join Table On                       (64)
	Join -> inner join                                 (65)
	Join -> left join                                  (66)
	Join -> right join                                 (67)
	Join -> outer join                                 (68)
	On -> on identifier '=' identifier                 (69)
	On -> on dotwalk '=' dotwalk                       (70)
	Limit ->                                           (71)
	Limit -> limit integer                             (72)
	Where ->                                           (73)
	Where -> where WhereExpr                           (74)
	WhereExpr -> Primitive                             (75)
	WhereExpr -> identifier                            (76)
	WhereExpr -> dotwalk                               (77)
	WhereExpr -> identifier '(' Args ')'               (78)
	WhereExpr -> WhereOperator                         (79)
	WhereExpr -> any SubQuery                          (80)
	WhereExpr -> all SubQuery                          (81)
	WhereExpr -> exists SubQuery                       (82)
	WhereExpr -> '(' WhereExpr ')'                     (83)
	WhereOperator -> WhereExpr in '(' Query ')'        (84)
	WhereOperator -> WhereExpr in '(' Args ')'         (85)
	WhereOperator -> WhereExpr notIn '(' Query ')'     (86)
	WhereOperator -> WhereExpr notIn '(' Args ')'      (87)
	WhereOperator -> WhereExpr '+' WhereExpr           (88)
	WhereOperator -> WhereExpr '-' WhereExpr           (89)
	WhereOperator -> WhereExpr '*' WhereExpr           (90)
	WhereOperator -> WhereExpr '/' WhereExpr           (91)
	WhereOperator -> WhereExpr '%' WhereExpr           (92)
	WhereOperator -> WhereExpr '=' WhereExpr           (93)
	WhereOperator -> WhereExpr '!=' WhereExpr          (94)
	WhereOperator -> WhereExpr '<' WhereExpr           (95)
	WhereOperator -> WhereExpr '<=' WhereExpr          (96)
	WhereOperator -> WhereExpr '>' WhereExpr           (97)
	WhereOperator -> WhereExpr '>=' WhereExpr          (98)
	WhereOperator -> WhereExpr and WhereExpr           (99)
	WhereOperator -> WhereExpr or WhereExpr            (100)
	WhereOperator -> not WhereExpr                     (101)
	WhereOperator -> '-' WhereExpr                     (102)
	GroupBy ->                                         (103)
	GroupBy -> groupBy ColNames                        (104)
	GroupBy -> groupBy ColNames Having                 (105)
	ColNames -> identifier                             (106)
	ColNames -> dotwalk                                (107)
	ColNames -> ColNames ',' identifier                (108)
	ColNames -> ColNames ',' dotwalk                   (109)
	Having -> having Expr                              (110)
	OrderBy ->                                         (111)
	OrderBy -> orderBy ColNames                        (112)
	OrderBy -> orderBy ColNames Direction              (113)
	Direction -> ascending                             (114)
	Direction -> descending                            (115)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	select         { T.Select }
	from           { T.From }
	where          { T.Where }
	groupBy        { T.GroupBy }
	having         { T.Having }
	in             { T.In }
	notIn          { T.NotIn }
	distinct       { T.Distinct }
	limit          { T.Limit }
	orderBy        { T.OrderBy }
	ascending      { T.Ascending }
	descending     { T.Descending }
	union          { T.Union }
	intersect      { T.Intersect }
	all            { T.All }
	exists         { T.Exists }
	any            { T.Any }
	left           { T.Left }
	right          { T.Right }
	inner          { T.Inner }
	outer          { T.Outer }
	natural        { T.Natural }
	join           { T.Join }
	on             { T.On }
	'+'            { T.Plus }
	'-'            { T.Minus }
	'*'            { T.Asterisk }
	'/'            { T.FloatDivide }
	'%'            { T.Modulo }
	'='            { T.Equals }
	'!='           { T.NotEquals }
	'<'            { T.LT }
	'<='           { T.LTE }
	'>'            { T.GT }
	'>='           { T.GTE }
	not            { T.Not }
	and            { T.And }
	or             { T.Or }
	as             { T.As }
	identifier     { T.Identifier $$ }
	'('            { T.LeftParen }
	')'            { T.RightParen }
	','            { T.Comma }
	bc             { T.BlockComment $$ }
	dotwalk        { T.Dotwalk $$ }
	integer        { (T.Integer $$) }
	float          { (T.Float $$) }
	string         { (T.String $$) }
	true           { (T.TrueVal) }
	false          { (T.FalseVal) }
	null           { (T.Null ) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Query           rules 1, 2, 3, 4, 5, 6, 7
	SubQuery        rule  8
	Union           rules 9, 10, 11
	Intersect       rules 12, 13, 14
	Alias           rules 15, 16
	Null            rule  17
	True            rule  18
	False           rule  19
	String          rule  20
	Number          rules 21, 22
	Primitive       rules 23, 24, 25, 26, 27
	Expr            rules 28, 29, 30, 31, 32, 33
	Args            rules 34, 35
	Arg             rule  36
	Operator        rules 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51
	SType           rules 52, 53
	Columns         rules 54, 55
	Column          rules 56, 57
	From            rule  58
	Tables          rules 59, 60
	Table           rules 61, 62, 63, 64
	Join            rules 65, 66, 67, 68
	On              rules 69, 70
	Limit           rules 71, 72
	Where           rules 73, 74
	WhereExpr       rules 75, 76, 77, 78, 79, 80, 81, 82, 83
	WhereOperator   rules 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102
	GroupBy         rules 103, 104, 105
	ColNames        rules 106, 107, 108, 109
	Having          rule  110
	OrderBy         rules 111, 112, 113
	Direction       rules 114, 115

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	select         shift, and enter state 5
	'('            shift, and enter state 6

	Query          goto state 3
	SubQuery       goto state 4

State 1


	'('            shift, and enter state 2


State 2

	Query -> '(' . Query ')'                            (rule 1)

	select         shift, and enter state 5
	'('            shift, and enter state 6

	Query          goto state 36
	SubQuery       goto state 4

State 3

	%start_parse -> Query .                             (rule 0)

	%eof           accept


State 4

	Query -> SubQuery . Union SubQuery                  (rule 6)
	Query -> SubQuery . Intersect SubQuery              (rule 7)

	union          shift, and enter state 34
	intersect      shift, and enter state 35

	Union          goto state 32
	Intersect      goto state 33

State 5

	Query -> select . SType                             (rule 2)
	Query -> select . SType From                        (rule 3)
	Query -> select . distinct SType                    (rule 4)
	Query -> select . distinct SType From               (rule 5)

	distinct       shift, and enter state 19
	'-'            shift, and enter state 20
	'*'            shift, and enter state 21
	not            shift, and enter state 22
	identifier     shift, and enter state 23
	'('            shift, and enter state 24
	dotwalk        shift, and enter state 25
	integer        shift, and enter state 26
	float          shift, and enter state 27
	string         shift, and enter state 28
	true           shift, and enter state 29
	false          shift, and enter state 30
	null           shift, and enter state 31

	Null           goto state 8
	True           goto state 9
	False          goto state 10
	String         goto state 11
	Number         goto state 12
	Primitive      goto state 13
	Expr           goto state 14
	Operator       goto state 15
	SType          goto state 16
	Columns        goto state 17
	Column         goto state 18

State 6

	Query -> '(' . Query ')'                            (rule 1)
	SubQuery -> '(' . Query ')'                         (rule 8)

	select         shift, and enter state 5
	'('            shift, and enter state 6

	Query          goto state 7
	SubQuery       goto state 4

State 7

	Query -> '(' Query . ')'                            (rule 1)
	SubQuery -> '(' Query . ')'                         (rule 8)

	')'            shift, and enter state 69


State 8

	Primitive -> Null .                                 (rule 23)

	from           reduce using rule 23
	groupBy        reduce using rule 23
	in             reduce using rule 23
	notIn          reduce using rule 23
	limit          reduce using rule 23
	orderBy        reduce using rule 23
	'+'            reduce using rule 23
	'-'            reduce using rule 23
	'*'            reduce using rule 23
	'/'            reduce using rule 23
	'%'            reduce using rule 23
	'='            reduce using rule 23
	'!='           reduce using rule 23
	'<'            reduce using rule 23
	'<='           reduce using rule 23
	'>'            reduce using rule 23
	'>='           reduce using rule 23
	and            reduce using rule 23
	or             reduce using rule 23
	as             reduce using rule 23
	identifier     reduce using rule 23
	')'            reduce using rule 23
	','            reduce using rule 23
	%eof           reduce using rule 23


State 9

	Primitive -> True .                                 (rule 24)

	from           reduce using rule 24
	groupBy        reduce using rule 24
	in             reduce using rule 24
	notIn          reduce using rule 24
	limit          reduce using rule 24
	orderBy        reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'*'            reduce using rule 24
	'/'            reduce using rule 24
	'%'            reduce using rule 24
	'='            reduce using rule 24
	'!='           reduce using rule 24
	'<'            reduce using rule 24
	'<='           reduce using rule 24
	'>'            reduce using rule 24
	'>='           reduce using rule 24
	and            reduce using rule 24
	or             reduce using rule 24
	as             reduce using rule 24
	identifier     reduce using rule 24
	')'            reduce using rule 24
	','            reduce using rule 24
	%eof           reduce using rule 24


State 10

	Primitive -> False .                                (rule 25)

	from           reduce using rule 25
	groupBy        reduce using rule 25
	in             reduce using rule 25
	notIn          reduce using rule 25
	limit          reduce using rule 25
	orderBy        reduce using rule 25
	'+'            reduce using rule 25
	'-'            reduce using rule 25
	'*'            reduce using rule 25
	'/'            reduce using rule 25
	'%'            reduce using rule 25
	'='            reduce using rule 25
	'!='           reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	and            reduce using rule 25
	or             reduce using rule 25
	as             reduce using rule 25
	identifier     reduce using rule 25
	')'            reduce using rule 25
	','            reduce using rule 25
	%eof           reduce using rule 25


State 11

	Primitive -> String .                               (rule 26)

	from           reduce using rule 26
	groupBy        reduce using rule 26
	in             reduce using rule 26
	notIn          reduce using rule 26
	limit          reduce using rule 26
	orderBy        reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'/'            reduce using rule 26
	'%'            reduce using rule 26
	'='            reduce using rule 26
	'!='           reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	and            reduce using rule 26
	or             reduce using rule 26
	as             reduce using rule 26
	identifier     reduce using rule 26
	')'            reduce using rule 26
	','            reduce using rule 26
	%eof           reduce using rule 26


State 12

	Primitive -> Number .                               (rule 27)

	from           reduce using rule 27
	groupBy        reduce using rule 27
	in             reduce using rule 27
	notIn          reduce using rule 27
	limit          reduce using rule 27
	orderBy        reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	'*'            reduce using rule 27
	'/'            reduce using rule 27
	'%'            reduce using rule 27
	'='            reduce using rule 27
	'!='           reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	and            reduce using rule 27
	or             reduce using rule 27
	as             reduce using rule 27
	identifier     reduce using rule 27
	')'            reduce using rule 27
	','            reduce using rule 27
	%eof           reduce using rule 27


State 13

	Expr -> Primitive .                                 (rule 28)

	from           reduce using rule 28
	limit          reduce using rule 28
	orderBy        reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'%'            reduce using rule 28
	'='            reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	and            reduce using rule 28
	or             reduce using rule 28
	as             reduce using rule 28
	identifier     reduce using rule 28
	')'            reduce using rule 28
	','            reduce using rule 28
	%eof           reduce using rule 28


State 14

	Operator -> Expr . '+' Expr                         (rule 37)
	Operator -> Expr . '-' Expr                         (rule 38)
	Operator -> Expr . '*' Expr                         (rule 39)
	Operator -> Expr . '/' Expr                         (rule 40)
	Operator -> Expr . '%' Expr                         (rule 41)
	Operator -> Expr . '=' Expr                         (rule 42)
	Operator -> Expr . '!=' Expr                        (rule 43)
	Operator -> Expr . '<' Expr                         (rule 44)
	Operator -> Expr . '<=' Expr                        (rule 45)
	Operator -> Expr . '>' Expr                         (rule 46)
	Operator -> Expr . '>=' Expr                        (rule 47)
	Operator -> Expr . and Expr                         (rule 48)
	Operator -> Expr . or Expr                          (rule 49)
	Column -> Expr .                                    (rule 56)
	Column -> Expr . Alias                              (rule 57)

	from           reduce using rule 56
	'+'            shift, and enter state 54
	'-'            shift, and enter state 55
	'*'            shift, and enter state 56
	'/'            shift, and enter state 57
	'%'            shift, and enter state 58
	'='            shift, and enter state 59
	'!='           shift, and enter state 60
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'>'            shift, and enter state 63
	'>='           shift, and enter state 64
	and            shift, and enter state 65
	or             shift, and enter state 66
	as             shift, and enter state 67
	identifier     shift, and enter state 68
	')'            reduce using rule 56
	','            reduce using rule 56
	%eof           reduce using rule 56

	Alias          goto state 53

State 15

	Expr -> Operator .                                  (rule 32)

	from           reduce using rule 32
	limit          reduce using rule 32
	orderBy        reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'%'            reduce using rule 32
	'='            reduce using rule 32
	'!='           reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	and            reduce using rule 32
	or             reduce using rule 32
	as             reduce using rule 32
	identifier     reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	%eof           reduce using rule 32


State 16

	Query -> select SType .                             (rule 2)
	Query -> select SType . From                        (rule 3)

	from           shift, and enter state 52
	')'            reduce using rule 2
	%eof           reduce using rule 2

	From           goto state 51

State 17

	SType -> Columns .                                  (rule 53)
	Columns -> Columns . ',' Column                     (rule 55)

	from           reduce using rule 53
	')'            reduce using rule 53
	','            shift, and enter state 50
	%eof           reduce using rule 53


State 18

	Columns -> Column .                                 (rule 54)

	from           reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	%eof           reduce using rule 54


State 19

	Query -> select distinct . SType                    (rule 4)
	Query -> select distinct . SType From               (rule 5)

	'-'            shift, and enter state 20
	'*'            shift, and enter state 21
	not            shift, and enter state 22
	identifier     shift, and enter state 23
	'('            shift, and enter state 24
	dotwalk        shift, and enter state 25
	integer        shift, and enter state 26
	float          shift, and enter state 27
	string         shift, and enter state 28
	true           shift, and enter state 29
	false          shift, and enter state 30
	null           shift, and enter state 31

	Null           goto state 8
	True           goto state 9
	False          goto state 10
	String         goto state 11
	Number         goto state 12
	Primitive      goto state 13
	Expr           goto state 14
	Operator       goto state 15
	SType          goto state 49
	Columns        goto state 17
	Column         goto state 18

State 20

	Operator -> '-' . Expr                              (rule 51)

	'-'            shift, and enter state 20
	not            shift, and enter state 22
	identifier     shift, and enter state 23
	'('            shift, and enter state 24
	dotwalk        shift, and enter state 25
	integer        shift, and enter state 26
	float          shift, and enter state 27
	string         shift, and enter state 28
	true           shift, and enter state 29
	false          shift, and enter state 30
	null           shift, and enter state 31

	Null           goto state 8
	True           goto state 9
	False          goto state 10
	String         goto state 11
	Number         goto state 12
	Primitive      goto state 13
	Expr           goto state 48
	Operator       goto state 15

State 21

	SType -> '*' .                                      (rule 52)

	from           reduce using rule 52
	')'            reduce using rule 52
	%eof           reduce using rule 52


State 22

	Operator -> not . Expr                              (rule 50)

	'-'            shift, and enter state 20
	not            shift, and enter state 22
	identifier     shift, and enter state 23
	'('            shift, and enter state 24
	dotwalk        shift, and enter state 25
	integer        shift, and enter state 26
	float          shift, and enter state 27
	string         shift, and enter state 28
	true           shift, and enter state 29
	false          shift, and enter state 30
	null           shift, and enter state 31

	Null           goto state 8
	True           goto state 9
	False          goto state 10
	String         goto state 11
	Number         goto state 12
	Primitive      goto state 13
	Expr           goto state 47
	Operator       goto state 15

State 23

	Expr -> identifier .                                (rule 29)
	Expr -> identifier . '(' Args ')'                   (rule 31)

	from           reduce using rule 29
	limit          reduce using rule 29
	orderBy        reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'%'            reduce using rule 29
	'='            reduce using rule 29
	'!='           reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	and            reduce using rule 29
	or             reduce using rule 29
	as             reduce using rule 29
	identifier     reduce using rule 29
	'('            shift, and enter state 46
	')'            reduce using rule 29
	','            reduce using rule 29
	%eof           reduce using rule 29


State 24

	Expr -> '(' . Expr ')'                              (rule 33)

	'-'            shift, and enter state 20
	not            shift, and enter state 22
	identifier     shift, and enter state 23
	'('            shift, and enter state 24
	dotwalk        shift, and enter state 25
	integer        shift, and enter state 26
	float          shift, and enter state 27
	string         shift, and enter state 28
	true           shift, and enter state 29
	false          shift, and enter state 30
	null           shift, and enter state 31

	Null           goto state 8
	True           goto state 9
	False          goto state 10
	String         goto state 11
	Number         goto state 12
	Primitive      goto state 13
	Expr           goto state 45
	Operator       goto state 15

State 25

	Expr -> dotwalk .                                   (rule 30)

	from           reduce using rule 30
	limit          reduce using rule 30
	orderBy        reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'%'            reduce using rule 30
	'='            reduce using rule 30
	'!='           reduce using rule 30
	'<'            reduce using rule 30
	'<='           reduce using rule 30
	'>'            reduce using rule 30
	'>='           reduce using rule 30
	and            reduce using rule 30
	or             reduce using rule 30
	as             reduce using rule 30
	identifier     reduce using rule 30
	')'            reduce using rule 30
	','            reduce using rule 30
	%eof           reduce using rule 30


State 26

	Number -> integer .                                 (rule 21)

	from           reduce using rule 21
	groupBy        reduce using rule 21
	in             reduce using rule 21
	notIn          reduce using rule 21
	limit          reduce using rule 21
	orderBy        reduce using rule 21
	'+'            reduce using rule 21
	'-'            reduce using rule 21
	'*'            reduce using rule 21
	'/'            reduce using rule 21
	'%'            reduce using rule 21
	'='            reduce using rule 21
	'!='           reduce using rule 21
	'<'            reduce using rule 21
	'<='           reduce using rule 21
	'>'            reduce using rule 21
	'>='           reduce using rule 21
	and            reduce using rule 21
	or             reduce using rule 21
	as             reduce using rule 21
	identifier     reduce using rule 21
	')'            reduce using rule 21
	','            reduce using rule 21
	%eof           reduce using rule 21


State 27

	Number -> float .                                   (rule 22)

	from           reduce using rule 22
	groupBy        reduce using rule 22
	in             reduce using rule 22
	notIn          reduce using rule 22
	limit          reduce using rule 22
	orderBy        reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'*'            reduce using rule 22
	'/'            reduce using rule 22
	'%'            reduce using rule 22
	'='            reduce using rule 22
	'!='           reduce using rule 22
	'<'            reduce using rule 22
	'<='           reduce using rule 22
	'>'            reduce using rule 22
	'>='           reduce using rule 22
	and            reduce using rule 22
	or             reduce using rule 22
	as             reduce using rule 22
	identifier     reduce using rule 22
	')'            reduce using rule 22
	','            reduce using rule 22
	%eof           reduce using rule 22


State 28

	String -> string .                                  (rule 20)

	from           reduce using rule 20
	groupBy        reduce using rule 20
	in             reduce using rule 20
	notIn          reduce using rule 20
	limit          reduce using rule 20
	orderBy        reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	'*'            reduce using rule 20
	'/'            reduce using rule 20
	'%'            reduce using rule 20
	'='            reduce using rule 20
	'!='           reduce using rule 20
	'<'            reduce using rule 20
	'<='           reduce using rule 20
	'>'            reduce using rule 20
	'>='           reduce using rule 20
	and            reduce using rule 20
	or             reduce using rule 20
	as             reduce using rule 20
	identifier     reduce using rule 20
	')'            reduce using rule 20
	','            reduce using rule 20
	%eof           reduce using rule 20


State 29

	True -> true .                                      (rule 18)

	from           reduce using rule 18
	groupBy        reduce using rule 18
	in             reduce using rule 18
	notIn          reduce using rule 18
	limit          reduce using rule 18
	orderBy        reduce using rule 18
	'+'            reduce using rule 18
	'-'            reduce using rule 18
	'*'            reduce using rule 18
	'/'            reduce using rule 18
	'%'            reduce using rule 18
	'='            reduce using rule 18
	'!='           reduce using rule 18
	'<'            reduce using rule 18
	'<='           reduce using rule 18
	'>'            reduce using rule 18
	'>='           reduce using rule 18
	and            reduce using rule 18
	or             reduce using rule 18
	as             reduce using rule 18
	identifier     reduce using rule 18
	')'            reduce using rule 18
	','            reduce using rule 18
	%eof           reduce using rule 18


State 30

	False -> false .                                    (rule 19)

	from           reduce using rule 19
	groupBy        reduce using rule 19
	in             reduce using rule 19
	notIn          reduce using rule 19
	limit          reduce using rule 19
	orderBy        reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'*'            reduce using rule 19
	'/'            reduce using rule 19
	'%'            reduce using rule 19
	'='            reduce using rule 19
	'!='           reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	and            reduce using rule 19
	or             reduce using rule 19
	as             reduce using rule 19
	identifier     reduce using rule 19
	')'            reduce using rule 19
	','            reduce using rule 19
	%eof           reduce using rule 19


State 31

	Null -> null .                                      (rule 17)

	from           reduce using rule 17
	groupBy        reduce using rule 17
	in             reduce using rule 17
	notIn          reduce using rule 17
	limit          reduce using rule 17
	orderBy        reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'*'            reduce using rule 17
	'/'            reduce using rule 17
	'%'            reduce using rule 17
	'='            reduce using rule 17
	'!='           reduce using rule 17
	'<'            reduce using rule 17
	'<='           reduce using rule 17
	'>'            reduce using rule 17
	'>='           reduce using rule 17
	and            reduce using rule 17
	or             reduce using rule 17
	as             reduce using rule 17
	identifier     reduce using rule 17
	')'            reduce using rule 17
	','            reduce using rule 17
	%eof           reduce using rule 17


State 32

	Query -> SubQuery Union . SubQuery                  (rule 6)

	'('            shift, and enter state 43

	SubQuery       goto state 44

State 33

	Query -> SubQuery Intersect . SubQuery              (rule 7)

	'('            shift, and enter state 43

	SubQuery       goto state 42

State 34

	Union -> union .                                    (rule 9)
	Union -> union . all                                (rule 10)
	Union -> union . distinct                           (rule 11)

	distinct       shift, and enter state 40
	all            shift, and enter state 41
	'('            reduce using rule 9


State 35

	Intersect -> intersect .                            (rule 12)
	Intersect -> intersect . all                        (rule 13)
	Intersect -> intersect . distinct                   (rule 14)

	distinct       shift, and enter state 38
	all            shift, and enter state 39
	'('            reduce using rule 12


State 36

	Query -> '(' Query . ')'                            (rule 1)

	')'            shift, and enter state 37


State 37

	Query -> '(' Query ')' .                            (rule 1)



State 38

	Intersect -> intersect distinct .                   (rule 14)

	'('            reduce using rule 14


State 39

	Intersect -> intersect all .                        (rule 13)

	'('            reduce using rule 13


State 40

	Union -> union distinct .                           (rule 11)

	'('            reduce using rule 11


State 41

	Union -> union all .                                (rule 10)

	'('            reduce using rule 10


State 42

	Query -> SubQuery Intersect SubQuery .              (rule 7)

	')'            reduce using rule 7
	%eof           reduce using rule 7


State 43

	SubQuery -> '(' . Query ')'                         (rule 8)

	select         shift, and enter state 5
	'('            shift, and enter state 6

	Query          goto state 93
	SubQuery       goto state 4

State 44

	Query -> SubQuery Union SubQuery .                  (rule 6)

	')'            reduce using rule 6
	%eof           reduce using rule 6


State 45

	Expr -> '(' Expr . ')'                              (rule 33)
	Operator -> Expr . '+' Expr                         (rule 37)
	Operator -> Expr . '-' Expr                         (rule 38)
	Operator -> Expr . '*' Expr                         (rule 39)
	Operator -> Expr . '/' Expr                         (rule 40)
	Operator -> Expr . '%' Expr                         (rule 41)
	Operator -> Expr . '=' Expr                         (rule 42)
	Operator -> Expr . '!=' Expr                        (rule 43)
	Operator -> Expr . '<' Expr                         (rule 44)
	Operator -> Expr . '<=' Expr                        (rule 45)
	Operator -> Expr . '>' Expr                         (rule 46)
	Operator -> Expr . '>=' Expr                        (rule 47)
	Operator -> Expr . and Expr                         (rule 48)
	Operator -> Expr . or Expr                          (rule 49)

	'+'            shift, and enter state 54
	'-'            shift, and enter state 55
	'*'            shift, and enter state 56
	'/'            shift, and enter state 57
	'%'            shift, and enter state 58
	'='            shift, and enter state 59
	'!='           shift, and enter state 60
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'>'            shift, and enter state 63
	'>='           shift, and enter state 64
	and            shift, and enter state 65
	or             shift, and enter state 66
	')'            shift, and enter state 92


State 46

	Expr -> identifier '(' . Args ')'                   (rule 31)

	'-'            shift, and enter state 20
	not            shift, and enter state 22
	identifier     shift, and enter state 23
	'('            shift, and enter state 24
	dotwalk        shift, and enter state 25
	integer        shift, and enter state 26
	float          shift, and enter state 27
	string         shift, and enter state 28
	true           shift, and enter state 29
	false          shift, and enter state 30
	null           shift, and enter state 31

	Null           goto state 8
	True           goto state 9
	False          goto state 10
	String         goto state 11
	Number         goto state 12
	Primitive      goto state 13
	Expr           goto state 89
	Args           goto state 90
	Arg            goto state 91
	Operator       goto state 15

State 47

	Operator -> Expr . '+' Expr                         (rule 37)
	Operator -> Expr . '-' Expr                         (rule 38)
	Operator -> Expr . '*' Expr                         (rule 39)
	Operator -> Expr . '/' Expr                         (rule 40)
	Operator -> Expr . '%' Expr                         (rule 41)
	Operator -> Expr . '=' Expr                         (rule 42)
	Operator -> Expr . '!=' Expr                        (rule 43)
	Operator -> Expr . '<' Expr                         (rule 44)
	Operator -> Expr . '<=' Expr                        (rule 45)
	Operator -> Expr . '>' Expr                         (rule 46)
	Operator -> Expr . '>=' Expr                        (rule 47)
	Operator -> Expr . and Expr                         (rule 48)
	Operator -> Expr . or Expr                          (rule 49)
	Operator -> not Expr .                              (rule 50)

	from           reduce using rule 50
	limit          reduce using rule 50
	orderBy        reduce using rule 50
	'+'            shift, and enter state 54
	'-'            shift, and enter state 55
	'*'            shift, and enter state 56
	'/'            shift, and enter state 57
	'%'            shift, and enter state 58
	'='            shift, and enter state 59
	'!='           shift, and enter state 60
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'>'            shift, and enter state 63
	'>='           shift, and enter state 64
	and            reduce using rule 50
	or             reduce using rule 50
	as             reduce using rule 50
	identifier     reduce using rule 50
	')'            reduce using rule 50
	','            reduce using rule 50
	%eof           reduce using rule 50


State 48

	Operator -> Expr . '+' Expr                         (rule 37)
	Operator -> Expr . '-' Expr                         (rule 38)
	Operator -> Expr . '*' Expr                         (rule 39)
	Operator -> Expr . '/' Expr                         (rule 40)
	Operator -> Expr . '%' Expr                         (rule 41)
	Operator -> Expr . '=' Expr                         (rule 42)
	Operator -> Expr . '!=' Expr                        (rule 43)
	Operator -> Expr . '<' Expr                         (rule 44)
	Operator -> Expr . '<=' Expr                        (rule 45)
	Operator -> Expr . '>' Expr                         (rule 46)
	Operator -> Expr . '>=' Expr                        (rule 47)
	Operator -> Expr . and Expr                         (rule 48)
	Operator -> Expr . or Expr                          (rule 49)
	Operator -> '-' Expr .                              (rule 51)

	from           reduce using rule 51
	limit          reduce using rule 51
	orderBy        reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'*'            reduce using rule 51
	'/'            reduce using rule 51
	'%'            reduce using rule 51
	'='            reduce using rule 51
	'!='           reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	and            reduce using rule 51
	or             reduce using rule 51
	as             reduce using rule 51
	identifier     reduce using rule 51
	')'            reduce using rule 51
	','            reduce using rule 51
	%eof           reduce using rule 51


State 49

	Query -> select distinct SType .                    (rule 4)
	Query -> select distinct SType . From               (rule 5)

	from           shift, and enter state 52
	')'            reduce using rule 4
	%eof           reduce using rule 4

	From           goto state 88

State 50

	Columns -> Columns ',' . Column                     (rule 55)
